@@ -1,4 +1,7 @@
 
+2009-04-08  0:23 Ali aliov@xfce.org 
+	 * : Fix issue with battery ref count that was causing a crash when hald restarts
+
 2009-04-07 13:23 Ali aliov@xfce.org 
 	 * : Implement a clean way to restart HAL related objects when HALD restarts
 
